fixed galactic time not being timezone independent

--- a/src/app/views/galactic/galactic.component.html
+++ b/src/app/views/galactic/galactic.component.html
@@ -10,9 +10,9 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Galactic Time is another base-10 system of time, but instead is based on a 'galactic' constant (Cesium-133 fluctuations) instead of
     the rotation of Earth.
     Days (also known as a Krislon) are divided into 10 <span class="dd"> Wizlons</span>, Wizlons are divided into 100<span class="md"> Peemlons</span>, and Peemlons are divided into 100 <span class="td">Meeplons</span>.
-    1 Meeplon is 10,000,000,000 fluctuations of Cesium-133. This means a Meeplon is slightly faster than a normal Earth second.<a href="/"> Wizlon Time...</a>
+    1 Meeplon is 10,000,000,000 fluctuations of Cesium-133. This means a Meeplon is slightly slower than a normal Earth second.<a href="/"> Wizlon Time...</a>
   </p>
 
-
+  <app-about-icon></app-about-icon>
 </div>
 
