--- a/src/app/views/time/time.component.html
+++ b/src/app/views/time/time.component.html
@@ -12,6 +12,6 @@
     Midnight is 0.00. Noon is 5.00. The clock above is your current time. &nbsp; <a href="/gt">Galactic Time...</a>
   </p>
 
-
+<app-about-icon></app-about-icon>
 </div>
 
